# src/authentication/controller/authenticationController.ts
@@ -6,40 +6,6 @@ import { LoginDTO } from '../dtos/LoginDTO';
 import { LogoutService } from '../services/logoutService';
 
 export class AuthenticationController {
-  /**
-   * @swagger
-   * /auth:
-   *   post:
-   *     summary: Realiza o login de um usuário utilizando o e-mail OU cpf
-   *     tags: [Authentication]
-   *     requestBody:
-   *       required: true
-   *       content:
-   *         application/json:
-   *           schema:
-   *             $ref: '#/components/schemas/LoginDTO'
-   *     responses:
-   *       200:
-   *         description: Login realizado com sucesso
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 token:
-   *                   type: string
-   *                 user:
-   *                   type: object
-   *                   properties:
-   *                     cpf:
-   *                       type: string
-   *                     userId:
-   *                       type: string
-   *                     name:
-   *                       type: string
-   *                     email:
-   *                       type: string
-   */
   async login(request: Request, response: Response) {
     const { password, email, cpf } = new LoginDTO(request.body).getAll();
 
@@ -54,24 +20,6 @@ export class AuthenticationController {
     return response.json(token);
   }
 
-  /**
-   * @swagger
-   * /auth/logout:
-   *   post:
-   *     summary: Realiza o logout de um usuário e adiciona seu token na blacklist
-   *     tags: [Authentication]
-   *     responses:
-   *       200:
-   *         description: Logout realizado com sucesso
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 message:
-   *                   type: string
-   *                   example: Logout sucessfully
-   */
   async logout(request: Request, response: Response) {
     const authHeader = request.headers['authorization'];
 
@@ -79,6 +27,6 @@ export class AuthenticationController {
 
     await logoutService.execute(authHeader);
 
-    return response.json({ message: 'Logout sucessfully' });
+    return response.json({ message: 'Logout successfully' });
   }
 }
