# src/users/controller/UsersController.ts
@@ -7,33 +7,6 @@ import { UpdateUserDTO } from '../dtos/UpdateUserDTO';
 import { ActiveUserDTO } from '../dtos/ActiveUserDTO';
 
 export class UsersController {
-  /**
-   * @swagger
-   * /users:
-   *   post:
-   *     summary: Create a new user
-   *     tags: [Users]
-   *     requestBody:
-   *       required: true
-   *       content:
-   *         application/json:
-   *           schema:
-   *             $ref: '#/components/schemas/CreateUserDTO'
-   *     responses:
-   *       201:
-   *         description: User created successfully
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 id:
-   *                   type: string
-   *                 name:
-   *                   type: string
-   *                 email:
-   *                   type: string
-   */
   async createUser(req: Request, res: Response): Promise<Response> {
     const createUserDto = new CreateUserDTO(req.body);
     const profilePhoto = req.file;
@@ -47,34 +20,6 @@ export class UsersController {
     return res.status(201).json(user);
   }
 
-  /**
-   * @swagger
-   * /users/{id}:
-   *   get:
-   *     summary: Get a user by ID
-   *     tags: [Users]
-   *     parameters:
-   *       - in: path
-   *         name: id
-   *         schema:
-   *           type: string
-   *         required: true
-   *         description: ID of the user
-   *     responses:
-   *       200:
-   *         description: User found
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 id:
-   *                   type: string
-   *                 name:
-   *                   type: string
-   *                 email:
-   *                   type: string
-   */
   async findById(req: Request, res: Response): Promise<Response> {
     const { id } = req.params;
 
@@ -84,29 +29,6 @@ export class UsersController {
     return res.status(200).json(user);
   }
 
-  /**
-   * @swagger
-   * /users:
-   *   get:
-   *     summary: Get all users
-   *     tags: [Users]
-   *     responses:
-   *       200:
-   *         description: A list of users
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: array
-   *               items:
-   *                 type: object
-   *                 properties:
-   *                   id:
-   *                     type: string
-   *                   name:
-   *                     type: string
-   *                   email:
-   *                     type: string
-   */
   async getAll(req: Request, res: Response): Promise<Response> {
     const userService = container.resolve(UserService);
     const users = await userService.getAllUsers();
@@ -114,36 +36,6 @@ export class UsersController {
     return res.status(200).json(users);
   }
 
-  /**
-   * @swagger
-   * /users/{id}:
-   *   put:
-   *     summary: Update a user
-   *     tags: [Users]
-   *     parameters:
-   *       - in: path
-   *         name: id
-   *         schema:
-   *           type: string
-   *         required: true
-   *         description: ID of the user
-   *     requestBody:
-   *       required: true
-   *       content:
-   *         application/json:
-   *           schema:
-   *             $ref: '#/components/schemas/UpdateUserDTO'
-   *     responses:
-   *       200:
-   *         description: User updated successfully
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 message:
-   *                   type: string
-   */
   async updateUser(req: Request, res: Response): Promise<Response> {
     const updateUserDto = new UpdateUserDTO(req.body);
     const profilePhoto = req.file;
@@ -159,30 +51,6 @@ export class UsersController {
     return res.status(200).json({ message: 'User updated successfully' });
   }
 
-  /**
-   * @swagger
-   * /users/{id}:
-   *   delete:
-   *     summary: Delete a user
-   *     tags: [Users]
-   *     parameters:
-   *       - in: path
-   *         name: id
-   *         schema:
-   *           type: string
-   *         required: true
-   *         description: ID of the user
-   *     responses:
-   *       200:
-   *         description: User deleted successfully
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 message:
-   *                   type: string
-   */
   async delete(req: Request, res: Response): Promise<Response> {
     const { id } = req.params;
     const userId = res.locals.userId;
@@ -193,36 +61,6 @@ export class UsersController {
     return res.status(200).json({ message: 'User deleted successfully' });
   }
 
-  /**
-   * @swagger
-   * /users/{id}/activate:
-   *   patch:
-   *     summary: Activate or deactivate a user
-   *     tags: [Users]
-   *     parameters:
-   *       - in: path
-   *         name: id
-   *         schema:
-   *           type: string
-   *         required: true
-   *         description: ID of the user
-   *     requestBody:
-   *       required: true
-   *       content:
-   *         application/json:
-   *           schema:
-   *             $ref: '#/components/schemas/ActiveUserDTO'
-   *     responses:
-   *       200:
-   *         description: Active status updated successfully
-   *         content:
-   *           application/json:
-   *             schema:
-   *               type: object
-   *               properties:
-   *                 message:
-   *                   type: string
-   */
   async activeUser(req: Request, res: Response): Promise<Response> {
     const requestValidated = new ActiveUserDTO({
       ...req.params,
